third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/overwrite-with-deep-table.stderr
TOML parse error at line 2, column 1
  |
2 | [a.b.c.d]
  | ^
invalid table header
dotted key `a` attempted to extend non-table type (integer)
